header and sidenav: fix z-index bug.

--- a/src/app/components/base/app-sidenav/_app-sidenav.scss
+++ b/src/app/components/base/app-sidenav/_app-sidenav.scss
@@ -8,7 +8,7 @@
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 3;
+  z-index: z(shoryuken) + 2;
   
   // Box-model
   display: flex;
@@ -17,10 +17,7 @@
   // Responsive
   @include respond-to(small) {
     // Positioning
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2;
+    z-index: z(shoryuken);
     
     // Box-model
     height: 100%;
